returned Trail along with its route type and owner
